--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,23 @@
 Package: mecoturn
 Type: Package
-Title: Decipher Microbial Turnover along A Gradient
+Title: Decipher Microbial Turnover along a Gradient
 Version: 0.1.0
 Authors@R: c(person("Chi", "Liu", role = c("aut", "cre"), email = "liuchi0426@126.com"),
-              person("Minjie", "Yao", role = "ctb", email = "yaomj@fafu.edu.cn"),
-              person("Xiangzhen", "Li", role = "ctb", email = "lixz@cib.ac.cn")
+              person("Xiangzhen", "Li", role = "ctb", email = "lixz@cib.ac.cn"),
+              person("Minjie", "Yao", role = "ctb", email = "yaomj@fafu.edu.cn")
 			  )
-Author: Chi Liu [aut, cre], Minjie Yao [ctb], Xiangzhen Li [ctb]
+Author: Chi Liu [aut, cre], Xiangzhen Li [ctb], Minjie Yao [ctb]
 Maintainer: Chi Liu <liuchi0426@126.com>
-Description: Decipher microbial turnover along a gradient based on the classes and functons of 'microeco' package <https://github.com/ChiLiubio/microeco>..
+Description: Decipher microbial turnover along a gradient based on the classes and functions of 'microeco' package <https://github.com/ChiLiubio/microeco>.
 URL: https://github.com/ChiLiubio/mecoturn
 Depends: R (>= 3.5.0)
-Imports: R6, microeco (>= 0.13.0), magrittr, ggpubr
-Suggests: ape, agricolae
+Imports: R6, ggplot2 (>= 3.4.0), microeco (>= 0.14.0), magrittr, ggpubr
+Suggests: ape, GUniFrac, agricolae, lmerTest, betareg
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2022-11-15
+Packaged: 2023-02-20
 Repository: CRAN
-Date/Publication: 2022-11-15
-RoxygenNote: 7.2.1
+Date/Publication: 2022-02-20
+RoxygenNote: 7.2.2
