--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: Two pipelines are provided to study microbial turnover along a grad
 URL: https://github.com/ChiLiubio/mecoturn
 Depends: R (>= 3.5.0)
 Imports: R6, ggplot2 (>= 3.4.0), microeco (>= 0.14.0), magrittr, ggpubr
-Suggests: ape, GUniFrac, agricolae, lmerTest, betareg
+Suggests: ape, GUniFrac, agricolae, lmerTest, betareg, glmmTMB
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
@@ -20,4 +20,4 @@ NeedsCompilation: no
 Packaged: 2023-03-06
 Repository: CRAN
 Date/Publication: 2022-03-06
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
