more Imports packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,12 @@ export(betaturn)
 export(taxaturn)
 import(ggplot2)
 import(microeco)
+importFrom(GUniFrac,GUniFrac)
 importFrom(R6,R6Class)
+importFrom(agricolae,duncan.test)
+importFrom(betareg,betareg)
 importFrom(ggpubr,ggboxplot)
+importFrom(glmmTMB,glmmTMB)
+importFrom(lmerTest,ranova)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
