--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,13 @@ Maintainer: Chi Liu <liuchi0426@126.com>
 Description: Two pipelines are provided to study microbial turnover along a gradient, including the beta diversity and microbial abundance change. The 'betaturn' class consists of the steps of community dissimilarity matrix generation, matrix conversion, differential test and visualization. The workflow of 'taxaturn' class includes the taxonomic abundance calculation, abundance transformation, abundance change summary, statistical analysis and visualization. Multiple statistical approaches can contribute to the analysis of microbial turnover.
 URL: https://github.com/ChiLiubio/mecoturn
 Depends: R (>= 3.5.0)
-Imports: R6, ggplot2 (>= 3.4.0), microeco (>= 0.19.0), magrittr, ggpubr
-Suggests: ape, GUniFrac, agricolae, lmerTest, betareg, glmmTMB
+Imports: R6, ggplot2 (>= 3.4.0), microeco (>= 0.19.0), GUniFrac, magrittr, ggpubr, agricolae, lmerTest, betareg, glmmTMB
+Suggests: ape
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2023-05-27
+Packaged: 2023-07-02
 Repository: CRAN
-Date/Publication: 2022-06-01
+Date/Publication: 2022-07-02
 RoxygenNote: 7.2.3
